<resources>
    <string name="app_name">Task</string>
    <string name="title_activity_coin_details">CoinDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragmentb Arg</string>
    <string name="tags">Tags</string>
    <string name="team_members">Team Members</string>
    <string name="_1">1</string>
    <string name="textview">Bitcoin</string>
    <string name="Symbol">(BTC)</string>
    <string name="isActive">active</string>
    <string name="description"> bla blha vsasjaj</string>
    <string name="isActives">active</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="eth">ETH</string>
    <string name="Theter">TextView</string>
    <string name="btc">BTC</string>
    <string name="ethsymbol">ETH</string>
    <string name="usdt">usdT</string>
    <string name="btcactive">active</string>
    <string name="btc_image">btc Image</string>
    <string name="eth_image">eth image</string>
    <string name="usdt_image">usdt image</string>
    <string name="rank">Rank</string>
    <string name="isactive">active</string>
    <string name="isnew">new</string>
    <string name="type">Type</string>
    <string name="founder">Founder</string>
    <string name="position">position</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="stars">Stars</string>
    <string name="must_watch">Must watch</string>
    <string name="countries">Countries</string>
    <string name="country">Country</string>
    <string name="username">Username</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="welcome">Welcome</string>
    <string name="view_title">The Lord of the Rings: The Return of the King</string>
    <string name="view_vote">8.8</string>
</resources>