<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_margin="@dimen/small"
    android:background="@color/grey">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_coin"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cardViewShape"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/cName"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/bitcoin"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cSymbol"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/btc"
                app:layout_constraintBaseline_toBaselineOf="@+id/cRank"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <TextView
                android:id="@+id/cRank"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/rank"
                app:drawableStartCompat="@drawable/ic_baseline_local_fire_department_24"
                app:layout_constraintStart_toEndOf="@+id/cSymbol"
                app:layout_constraintTop_toBottomOf="@+id/cName" />

            <TextView
                android:id="@+id/cIsNew"
                style="?attr/textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:text="@string/isnew"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cIsActive"
                style="?attr/textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:text="@string/isactive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cIsNew" />

            <TextView
                android:id="@+id/cType"
                style="?attr/textAppearanceHeadline5"
                android:layout_width="102dp"
                android:layout_height="33dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="12dp"
                android:text="@string/type"
                app:drawableLeftCompat="@drawable/ic_outline_monetization_on_24"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/cRank" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>